--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
-<!DOCTUPE html>
-<html lang="ko">
+<!DOCTYPE html>
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>정수아이</title>
-</head>
-<body>
-    <form action="http://youtube.com">
-        <input type="text">
-        <br>
-        <input type="submit" value="전송">
-        <input type="reset">
-    </form>
-    <form">
-        <input type="image" src="https://ifh.cc/g/xJdgNj.jpg" height="200">
-    </form>
-    <form action="upload.php" method="post" enctype="multipart/form-data">
-        <label>업로드할 파일을 선택하세요.</label>
-        <input type="file" name="profile">
-        <input type="submit" value="업로드">
-    </form>
-</body>
-</html>
+        <title>파일전송</title>
+    </head>
+    <body>
+        <form action="https://caravane0420.github.io/test/upload.php" method="POST" enctype="multipart/form-data">
+            <input type="file" name="profile">
+            <input type="submit" value="파일전송">
+        </form>
+    </body>
