--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>파일전송</title>
     </head>
     <body>
-        <form action="https://caravane0420.github.io/test/upload.php" method="POST" enctype="multipart/form-data">
+        <form action="http://caravane0420.github.io/test/upload.php" method="POST" enctype="multipart/form-data">
             <input type="file" name="profile">
             <input type="submit" value="파일전송">
         </form>
