--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>파일전송</title>
-    </head>
-    <body>
-        <form action="http://caravane0420.github.io/test/upload.php" method="POST" enctype="multipart/form-data">
-            <input type="file" name="profile">
-            <input type="submit" value="파일전송">
-        </form>
-    </body>
+<head>
+<meta charset="EUC-KR">
+<title>Insert title here</title>
+</head>
+<body>
+<img src="Upload/images.jpg">
+</body>
+</html>
